feat: cloud shadow projections on the surface of planets, for regular textures, cubemaps and SVT clouds.